--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Environments #
 .env
 .venv
+.idea
 env/
 venv/
 ENV/
@@ -30,5 +31,6 @@ data/log/*.log
 akrios_ca
 akrios_ca.pub
 akrios_ca-cert.pub
-key.py
+keys.py
+nohup.out
 
